--- a/index.html
+++ b/index.html
@@ -5,9 +5,24 @@
     <title>Basic Bootstrap Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+  <style type="text/css">
+  .foo {
+       position: absolute;
+       top: 0;
+       left: 0;
+       bottom: 0;
+       right: 0;
+       margin: auto;
+  }
+
+  </style>
 </head>
 <body>
-<p>This is text</p>
+<!-- <div><p class="text-center pagination-centered">This is text</p></div> -->
+<div class="container">
+<!--<div class="center-block"><p class="text-center">This is text</p></div> -->
+<div class="center-block text-center"><img src="greenBall.png"/></div>
+
     <nav role="navigation" class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -33,7 +48,7 @@
             </div>
         </div>
     </nav>
-
+    </div>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
