--- a/index.html
+++ b/index.html
@@ -5,24 +5,50 @@
     <title>Basic Bootstrap Template</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
   <style type="text/css">
-  .foo {
-       position: absolute;
-       top: 0;
-       left: 0;
-       bottom: 0;
-       right: 0;
-       margin: auto;
-  }
+
 
   </style>
 </head>
 <body>
 <!-- <div><p class="text-center pagination-centered">This is text</p></div> -->
-<div class="container">
+<div class="container-fluid">
 <!--<div class="center-block"><p class="text-center">This is text</p></div> -->
-<div class="center-block text-center"><img src="greenBall.png"/></div>
+  <div class="row">
+    <div class="col-xs-6 col-md-4">
 
+    <form>
+    <div class="form-group">
+        <label for="inputEmail">Email</label>
+        <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+    </div>
+    <div class="form-group">
+        <label for="inputPassword">Password</label>
+        <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+    </div>
+    <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+    </div>
+    <button type="submit" class="btn btn-primary">Login</button>
+    </form>
+    </div>
+<!--
+    <div class="col-xs-12 col-md-8">
+      <div class="">
+        <img class="img-responsive center-block" src="bg_test.png"></img>
+      </div>
+    </div>
+-->
+    <div class="col-xs-12 col-md-8">
+      <div class="center">
+        <img class="img-responsive" src="bg_test.png"></img>
+      </div>
+    </div>
+
+  </div>
+<!--  <div class="center-block text-center"><img src="bg_test.png"/></div> -->
+</div>
     <nav role="navigation" class="navbar navbar-default navbar-fixed-bottom">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
@@ -48,7 +74,6 @@
             </div>
         </div>
     </nav>
-    </div>
     <script src="http://code.jquery.com/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 </body>
