--- a/foo.html
+++ b/foo.html
@@ -44,6 +44,7 @@
                 <li class="active"><a href="#">Home</a></li>
                 <li><a href="#">Profile</a></li>
                 <li><a href="#">Messages</a></li>
+                <li>Foo</li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#">Login</a></li>
@@ -55,5 +56,12 @@
 
   <script src="http://code.jquery.com/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script type="text/javascript">
+
+    jQuery(document).ready(function() {
+      console.log("foo");
+    });
+
+  </script>
 </body>
 </html>
