--- a/foo.html
+++ b/foo.html
@@ -12,10 +12,10 @@
     <div class="row-fluid">
       <div class="col-md-4">
         <div class="panel panel-default borderedPanel" id="leftPanel">
-          <div class="panel-body">
-            Left
+          <div id="leftBodyPanel" class="panel-body">
+            <p id="tb">Left</p>
           </div>
-          <div id="spacer" class="hidden-sm"></div>
+          <div id="spacer" class="hidden-sm hidden-xs" style="background-color: red;"></div>
         </div>
 
       </div>
