--- a/foo.html
+++ b/foo.html
@@ -10,15 +10,25 @@
 <body>
   <div class="container-fluid">
     <div class="row-fluid">
+
       <div class="col-md-4">
+        <div id="myColumn">
+
+          <p id="tb">Left</p>
+          <div id="spacer" class="hidden-sm hidden-xs" style="background-color: red;"></div>
+        </div>
+      </div>
+
+<!--
         <div class="panel panel-default borderedPanel" id="leftPanel">
           <div id="leftBodyPanel" class="panel-body">
             <p id="tb">Left</p>
           </div>
           <div id="spacer" class="hidden-sm hidden-xs" style="background-color: red;"></div>
         </div>
-
       </div>
+-->
+
       <div class="col-md-8">
         <div class="panel panel-default borderedPanel" id="rightPanel">
           <div class="panel-body">
@@ -57,6 +67,7 @@
 
   <script src="http://code.jquery.com/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
+  <script src="js/viewportSize.js"></script>
   <script src="js/main.js"></script>
   <script type="text/javascript">
 
