--- a/foo.html
+++ b/foo.html
@@ -12,7 +12,7 @@
     <div class="row-fluid">
 
       <div class="col-md-4">
-        <div id="myColumn">
+        <div id="myColumn" class="goodColumn">
 
           <p id="tb">Left</p>
           <div id="spacer" class="hidden-sm hidden-xs" style="background-color: red;"></div>
@@ -30,10 +30,9 @@
 -->
 
       <div class="col-md-8">
-        <div class="panel panel-default borderedPanel" id="rightPanel">
-          <div class="panel-body">
-            <img class="img-responsive img-centered" src="bg_test.png"/>
-          </div>
+        <div id="picColumn" class="goodColumn">
+          <img class="img-responsive img-centered" src="bg_test.png"/>
+        </div>
       </div>
     </div>
   </div>
